# SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
# SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FILE(GLOB SRC util/*.c* builder/*.c* objective/*.c* metric/*.c* *.c*)
LIST(REMOVE_ITEM SRC "${CMAKE_CURRENT_LIST_DIR}/thundergbm_train.cpp")
LIST(REMOVE_ITEM SRC "${CMAKE_CURRENT_LIST_DIR}/thundergbm_predict.cpp")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CUDA_cusparse_LIBRARY})

ADD_EXECUTABLE(${PROJECT_NAME}-train thundergbm_train.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-train ${PROJECT_NAME})

ADD_EXECUTABLE(${PROJECT_NAME}-predict thundergbm_predict.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-predict ${PROJECT_NAME})
